--- a/app/templates/continueing_edu/login.html
+++ b/app/templates/continueing_edu/login.html
@@ -106,7 +106,7 @@
 {% block content %}
 <section class="section py-16">
     <div class="container is-max-desktop">
-        <h1 class="title is-2 has-text-centered mb-6 has-text-gray-800 rounded-md">{{ texts.login_page_title }}</h1>
+        <!-- <h1 class="title is-2 has-text-centered mb-6 has-text-gray-800 rounded-md">{{ texts.login_page_title }}</h1> -->
 
         <div class="modern-card mx-auto animate-in">
             <div class="hero">
@@ -160,21 +160,21 @@
                         else 'Forgot your password?' }}
                     </a>
                 </p>
-
+                <!-- 
                 <div style="display: flex; align-items: center; margin: 1.5rem 0;">
                     <div style="flex: 1; border-bottom: 1px solid #e5e7eb;"></div>
                     <span style="padding: 0 1rem; color: #6b7280; font-size: 0.875rem;">{{ 'หรือ' if current_lang ==
                         'th' else 'OR' }}</span>
                     <div style="flex: 1; border-bottom: 1px solid #e5e7eb;"></div>
-                </div>
+                </div> -->
 
-                <div class="has-text-centered mt-3">
+                <!-- <div class="has-text-centered mt-3">
                     <div class="g_id_signin" data-type="standard" data-shape="rectangular" data-theme="outline"
                         data-text="continue_with" data-size="large" data-logo_alignment="center"
                         data-client_id="206836986017-1dctro1ehrqta2r91e5appn5j78spn9h.apps.googleusercontent.com"
                         data-ux_mode="popup" data-callback="handleCredentialResponse">
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
